--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
+    "vue-sticky": "^3.3.4",
+    "vue-vimeo-player": "0.0.9",
+    "vue-youtube-embed": "^2.2.1",
     "vuetify": "^1.0.19",
     "vuex": "^3.0.1"
   },
