--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "vue": "^2.5.16",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-flickity": "^1.1.2",
     "vue-router": "^3.0.1",
     "vue-sticky": "^3.3.4",
     "vue-vimeo-player": "0.0.9",
