--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "v-show-slide": "^1.6.0",
     "vue": "^2.5.16",
     "vue-awesome-swiper": "^3.1.3",
     "vue-flickity": "^1.1.2",
     "vue-router": "^3.0.1",
+    "vue-scrollto": "^2.13.0",
     "vue-sticky": "^3.3.4",
     "vue-vimeo-player": "0.0.9",
     "vue-youtube-embed": "^2.2.1",
