--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.13.0",
     "vue-sticky": "^3.3.4",
+    "vue-video-player": "^5.0.2",
     "vue-vimeo-player": "0.0.9",
     "vue-youtube-embed": "^2.2.1",
     "vuetify": "^1.0.19",
