--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "firebase": "^5.5.1",
+    "lodash": "^4.17.11",
     "v-show-slide": "^1.6.0",
     "vue": "^2.5.16",
     "vue-awesome-swiper": "^3.1.3",
